# bsky-archiver

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/lib/: errors.rs  mod.rs  post.rs  post_information.rs  types.rs
src/lib/extension/: mod.rs  reqwest_client.rs
