[package]
name = "bsky-archiver"
version = "0.1.0"
authors = ["Joshua Prince"]

[dependencies]
dotenvy = "0.15.7"
eframe = "0.32.1"
egui = "0.32.1"
hex = "0.4.3"
image = "0.25.6"
regex = "1.11.1"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
