[package]
name = "bsky-archiver"
version = "0.1.0"
authors = ["Joshua Prince"]
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
eframe = "0.33.3"
egui = "0.33.3"
hex = "0.4.3"
image = "0.25.10"
regex = "1.12.3"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
native-tls = "0.2.18"
tokio-rustls = "0.26.4"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
